--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,8 +7,8 @@
     </style>
 {% endblock %}
 {% block content %}
-    <h1>Index</h1>
+    <!-- <h1>Index</h1>
     <p class="important">
       Welcome to my awesome homepage.
-    </p>
+    </p> -->
 {% endblock %}
