--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -1,48 +1,24 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
-<head>
-    <meta charset="utf-8" />
+<html lang="en">
+  <head>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}
     <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
-    <link rel="stylesheet" href="/assets/css/app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
 </head>
 <body>
-    <div class="row extended">
-        <div class="large-12 columns">
-            <div class="top-bar">
-              <div class="top-bar-left">
-                <ul class="dropdown menu" data-dropdown-menu>
-                  <li class="menu-text">Site Title</li>
-                  <li>
-                    <a href="#">One</a>
-                    <ul class="menu vertical">
-                      <li><a href="#">One</a></li>
-                      <li><a href="#">Two</a></li>
-                      <li><a href="#">Three</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Two</a></li>
-                  <li><a href="#">Three</a></li>
-                </ul>
-              </div>
-              <div class="top-bar-right">
-                <ul class="menu">
-                  <li><input type="search" placeholder="Search"></li>
-                  <li><button type="button" class="button">Search</button></li>
-                </ul>
-              </div>
-            </div>
-        </div>
-    </div>
+
     <div id="content">{% block content %}{% endblock %}</div>
     <div id="footer">
         {% block footer %}
         eat it
         {% endblock %}
     </div>
-    <script src="/assets/js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 </body>
 </html>
