added some cards

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,8 +7,28 @@
     </style>
 {% endblock %}
 {% block content %}
-    <!-- <h1>Index</h1>
-    <p class="important">
-      Welcome to my awesome homepage.
-    </p> -->
+<div class="expanded row">
+<div class="col-xs-12 col-md-3">
+    <div class="card">
+        <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+</div>
+<div class="col-xs-12 col-md-6">
+    <div class="card">
+        <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div></div>
+<div class="col-xs-12 col-md-3">
+    <div class="card">
+        <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div></div>
+</div>
 {% endblock %}
