--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,33 +2,92 @@
 {% block title %}Index{% endblock %}
 {% block head %}
     {{ super() }}
-    <style type="text/css">
-        .important { color: #336699; }
-    </style>
 {% endblock %}
 {% block content %}
 <div class="expanded row">
 <div class="col-xs-12 col-md-3">
     <div class="card">
+        <img class="card-img-top" data-src="http://placekitten.com/500/200" src="http://placekitten.com/500/200" alt="Card image cap" >
         <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
+            <h4 class="card-title">Bob Shazbutt</h4>
+            <p class="card-text">Hey buddy, totally copying <a href="http://themes.getbootstrap.com/products/application">this</a> website.</p>
+        </div>
+        <div class="card-block">
+        <a href="#" class="card-link">Instagram</a>
+            <a href="#" class="card-link">Twitter</a>
+        </div>
+    </div>
+    <div class="card hidden-sm-down">
+        <div class="card-block">
+            <h4 class="card-title">About</h4>
+            <p class="card-text">Location: NYC</p>
+            <p class="card-text">Work: The Orchard</p>
+            <p class="card-text">Art/Tech: http://dethbird.com</p>
+        </div>
+    </div>
+    <div class="card hidden-sm-down">
+        <div class="card-block">
+            <h4 class="card-title">Instagram</h4>
+            <p class="card-text">Here's a whole heapin bunch of crap from Instagram.</p>
+        </div>
     </div>
 </div>
 <div class="col-xs-12 col-md-6">
-    <div class="card">
-        <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="jumbotron hidden-sm-down">
+      <div class="container">
+        <h1 class="display-3">Fluid jumby</h1>
+        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
       </div>
-    </div></div>
+    </div>
+</div>
 <div class="col-xs-12 col-md-3">
+    <h4 class="display-4">Current Projects:</h4>
     <div class="card">
         <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div></div>
+            <h4 class="card-title">North by Midwest</h4>
+        </div>
+        <img src="https://c2.staticflickr.com/2/1550/25935956231_4293e7ae47.jpg" />
+        <div class="card-block clearfix">
+            <h6 class="card-subtitle text-muted">A story about a jackass, family, the blues, and the lord almighty.</h6>
+            <span class="label label-info">Character Design</span>
+            <span class="label label-info">Illustration</span>
+            <br />
+            <br />
+            <button type="button" class="btn btn-success-outline btn-sm">More ...</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-block">
+            <h4 class="card-title">World of Beepo Beeparelli</h4>
+        </div>
+        <img src="https://c1.staticflickr.com/3/2439/3663515635_1c89de110c.jpg" />
+        <div class="card-block clearfix">
+            <h6 class="card-subtitle text-muted">A story about a japanese created italian robot who had the profession "plumber" uploaded into his main memory.</h6>
+            <span class="label label-info">Character Design</span>
+            <span class="label label-info">Illustration</span>
+            <span class="label label-info">Story</span>
+            <br />
+            <button type="button" class="btn btn-success-outline btn-sm">More ...</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-block">
+            <h4 class="card-title">Marquee Shade</h4>
+        </div>
+        <img src="https://c1.staticflickr.com/1/624/23108862960_b5cdce3674.jpg" />
+        <div class="card-block clearfix">
+            <h6 class="card-subtitle text-muted">A ragtag group of misfits has to protect their comedy club from ComedyMegaCorp and the Mob (with the help of the ghost of Shecky Green) </h6>
+            <span class="label label-info">Character Design</span>
+            <span class="label label-info">Illustration</span>
+            <span class="label label-info">Story</span>
+            <br />
+            <button type="button" class="btn btn-success-outline btn-sm">More ...</button>
+        </div>
+    </div>
+    <div class="card bg-inverse">
+        <div class="card-block">
+            <p class="card-text">&copy; 2016 ExplosionCorps and all it's constituaries from Asia to Eurasia.</p>
+        </div>
+    </div>
 </div>
 {% endblock %}
