--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -9,6 +9,8 @@
     <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap-social.css">
     <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 <body>
@@ -19,16 +21,16 @@
               &#9776;
               </button>
               <a class="navbar-brand hidden-sm-up" href="/">
-              Bootstrap
+              Rory Shazbutt
               </a>
           </div>
           <div class="collapse navbar-toggleable-xs" id="app-main-nav">
             <nav class="nav navbar-nav">
-                  <a class="nav-item nav-link active">Bootstrap</a>
+                  <a class="nav-item nav-link hidden-sm-down">Rory Shazbutt</a>
+                  <a class="nav-item nav-link active">Latest</a>
                   <a class="nav-item nav-link" href="/projects">Projects</a>
                   <a class="nav-item nav-link " href="/gallery">Gallery</a>
                   <a class="nav-item nav-link" href="/about">About</a>
-                  <a class="nav-item nav-link" href="/updates">Updates</a>
             </nav>
           </div>
       </header>
