--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,3 +8,40 @@
      float: right;
      clear: both;
 }
+.card-block .btn-social-icon {
+  margin-bottom: 3px;
+}
+.card-link img {
+  max-width: 40px;
+  height: auto;
+}
+
+.card-text {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
+}
+
+.btn-wordpress {
+  color: #fff;
+  background-color: #21759b;
+  border-color: rgba(0,0,0,0.2);
+}
+.btn-spotify {
+  color: #fff;
+  background-color: #1ed760;
+  border-color: rgba(0,0,0,0.2);
+}
