--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -17,14 +17,11 @@
             <a class="btn btn-social-icon btn-pinterest"><span class="fa fa-pinterest"></span></a>
             <a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
         </div>
-    </div>
-    <div class="card hidden-sm-down">
-        <div class="card-block">
-            <h4 class="card-title">About</h4>
-            <p class="card-text">Location: NYC</p>
-            <p class="card-text">Work: The Orchard</p>
-            <p class="card-text">Art/Tech: http://dethbird.com</p>
-        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><i class="fa fa-map"></i> NYC</li>
+            <li class="list-group-item"><i class="fa fa-briefcase"></i> The Orchard</li>
+            <li class="list-group-item"><i class="fa fa-paint-brush"></i> http://dethbird.com</li>
+        </ul>
     </div>
     <h4 class="display-4">Instagram</h4>
     {% for post in instagram_posts %}
@@ -43,6 +40,49 @@
         <h1 class="display-3">Fluid jumby</h1>
         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
       </div>
+    </div>
+    <h4 class="display-4">Current Projects:</h4>
+    <div class="card">
+        <div class="card-block">
+            <h2 class="card-title">North by Midwest</h2>
+        </div>
+        <img src="https://c2.staticflickr.com/2/1550/25935956231_4293e7ae47.jpg" />
+        <div class="card-block clearfix">
+            <h6 class="card-subtitle text-muted">A story about a jackass, family, the blues, and the lord almighty.</h6>
+            <span class="label label-info">Character Design</span>
+            <span class="label label-info">Illustration</span>
+            <br />
+            <br />
+            <button type="button" class="btn btn-success-outline btn-sm">More ...</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-block">
+            <h2 class="card-title">World of Beepo Beeparelli</h2>
+        </div>
+        <img src="https://c1.staticflickr.com/3/2439/3663515635_1c89de110c.jpg" />
+        <div class="card-block clearfix">
+            <h6 class="card-subtitle text-muted">A story about a japanese created italian robot who had the profession "plumber" uploaded into his main memory.</h6>
+            <span class="label label-info">Character Design</span>
+            <span class="label label-info">Illustration</span>
+            <span class="label label-info">Story</span>
+            <br />
+            <button type="button" class="btn btn-success-outline btn-sm">More ...</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-block">
+            <h2 class="card-title">Marquee Shade</h2>
+        </div>
+        <img src="https://c1.staticflickr.com/1/624/23108862960_b5cdce3674.jpg" />
+        <div class="card-block clearfix">
+            <h6 class="card-subtitle text-muted">A ragtag group of misfits has to protect their comedy club from ComedyMegaCorp and the Mob (with the help of the ghost of Shecky Green) </h6>
+            <span class="label label-info">Character Design</span>
+            <span class="label label-info">Illustration</span>
+            <span class="label label-info">Story</span>
+            <br />
+            <button type="button" class="btn btn-success-outline btn-sm">More ...</button>
+        </div>
     </div>
 </div>
 <div class="col-xs-12 col-md-3">
